fix border and scrollbar height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,6 @@
    }
 
    #smImgContain::-webkit-scrollbar{
-      height: 8px;
+      height: 4px;
    }
 }
